BoaUAT/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Line_Item_number__c</fullName>
        <description>This field is used to store the opportunity line item number.</description>
        <displayFormat>{0000}</displayFormat>
        <label>Line Item number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Make_at_Boa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make at Boa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEQNO_EXO__c</fullName>
        <description>Stores SEQNO from EXO.</description>
        <label>SEQNO (EXO)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplied_quantity__c</fullName>
        <label>Supplied quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiced_quantity__c</fullName>
        <label>Invoiced Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfcloud2__Do_not_show_on_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this item will not be shown on PDF document.</description>
        <inlineHelpText>If checked, this item will not be shown on PDF document.</inlineHelpText>
        <label>Do not show on PDF</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>